# moomoo-mcp-server

./: .env.example  .env.local  .gitignore  LICENSE  README.md  advanced_error.txt  error.txt  exec_error.txt  pro_error.txt  pyproject.toml
.agent/workflows/: sdd.md
docs/: constitution.md
docs/design/: TEMPLATE.md  milestone_B_opend_client.md  milestone_C_market_data.md  milestone_D_account_tools.md  milestone_G_advanced_features.md  milestone_H_pro_tools.md  milestone_J_execution_safety.md  milestone_K_technical_indicators.md
examples/scripts/: account_snapshot.py  check_contexts.py  check_orders.py  check_signature.py  check_signature_2.py  demo_tech_flexibility.py  quick_kline.py  quick_quote.py  test_advanced.py  test_diagnostics.py  test_execution_safety.py  test_imports.py  test_opend_connect.py  test_pro_tools.py  test_risk.py  test_technical_analysis.py  test_trading.py  test_us_quote.py
src/moomoo_mcp/: config.py  server.py
src/moomoo_mcp/account/: get_balance.py  get_margin_ratio.py  get_max_buyable.py  get_orders.py  get_positions.py
src/moomoo_mcp/analysis/: get_technical_indicators.py  indicators.py
src/moomoo_mcp/market_data/: get_financials.py  get_kline.py  get_market_snapshot.py  get_option_chain.py  get_order_book.py  get_quote.py
src/moomoo_mcp/opend/: client.py  errors.py
src/moomoo_mcp/risk/: manager.py
src/moomoo_mcp/system/: run_diagnostics.py
src/moomoo_mcp/trading/: buy_stock.py  cancel_order.py  get_deals.py  modify_order.py  sell_stock.py
src/moomoo_mcp/utils/: symbols.py
